# VimRust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  test.txt  user-manual.md
.github/workflows/: ci.yml  release.yml
examples/: sample-workflow.md  themes.toml  vimrustrc.example
src/: buffer.rs  commands.rs  cursor.rs  editor.rs  main.rs  modes.rs  syntax.rs  ui.rs
